# B2brilliant-sdk

./: LICENSE.md  README.md
javascript/: README.md  package.json
javascript/examples/: basic-usage.js
javascript/src/: apiClient.js  endpoints.js  errors.js  index.js  types.js
python/: .coverage  .gitignore  pyproject.toml
python/b2brilliant_sdk/: test_agent.py  test_api_client.py  test_endpoints.py  test_exceptions.py  test_user_service.py
python/examples/: basic_usage.py
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/coverage/: clover.xml  coverage-final.json  lcov.info
typescript/coverage/lcov-report/: apiClient.ts.html  endpoints.ts.html  errors.ts.html  index.html  index.ts.html
typescript/examples/: basic-usage.js
typescript/src/: apiClient.test.ts  apiClient.ts  endpoints.test.ts  endpoints.ts  errors.test.ts  errors.ts  index.test.ts  index.ts  types.test.ts  types.ts
typescript/types/: apiClient.d.ts  endpoints.d.ts  errors.d.ts  index.d.ts  types.d.ts
