[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b2brilliant_sdk"
version = "0.1.2"
authors = [
  { name = "B2Brilliant" },
]
description = "The Official Python SDK for the B2Brilliant Campaign Agent API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.9.0",
]

[project.urls]
"Homepage" = "https://b2brilliant.app"
"Bug Tracker" = "https://github.com/h8ngryDev4Hire/b2brilliant-sdk/issues"

[tool.pytest.ini_options]
testpaths = ["b2brilliant_sdk"]
python_files = ["*_test.py", "test_*.py"]
addopts = "--cov=b2brilliant_sdk --cov-report=term-missing --cov-report=html" 
